--- a/pagina.html
+++ b/pagina.html
@@ -1,35 +1,34 @@
 
 
+
 <table width="100%" weight="100%">
 	<tr>
-		<td width="50%" bgcolor="E4FF33" colspan="3"><center><h1>TORRELAVEGA</h1></center></td>
-	</tr>
+		<td bgcolor="33FDFF" colspan="2">
+			<center>
+				<h1>TORRELAVEGA</h1>
+			</center>
+		</td>
+	</tr>	
 	<tr>
-		<td bgcolor="33FDFF"><a href="C:\xampp\htdocs\ari1t_01_html\pagina.html"> <font color="red"> INICIO </font></a></td><td bgcolor="pink"></td><td bgcolor="pink"></td>
-	</tr>
-	<tr>
-		<td bgcolor="33FDFF"><a href="C:\xampp\htdocs\ari1t_01_html\plazas.html"> PLAZAS </a><td bgcolor="pink" rowspan="3"><img src="C:\xampp\htdocs\ari1t_01_html\img\torrelavega.jpg" width="200" height="200"> torrelavega a vista de pajaro <td bgcolor="pink" rowspan="3"></td>
-	</tr>
-	<tr>
-		<td bgcolor="33FDFF"><a href="C:\xampp\htdocs\ari1t_01_html\la lechera.html"> LA LECHERA </a></td>
-	</tr>
-	<tr>
-		<td bgcolor="33FDFF"><a href="C:\xampp\htdocs\ari1t_01_html\iglesias.html"> IGLESIAS </a></td>
-	</tr>
-	
-	<tr>
-		<td bgcolor="33FDFF"><a href="C:\xampp\htdocs\ari1t_01_html\barrios.html"> MERCADO DE GANADOS </a><td bgcolor="pink" rowspan="3" width=200>Torrelavega es considerada la segunda ciudad en importancia de Cantabria y dista 27,5 km de Santander capital. 
-Su privilegiada situación, encrucijada de caminos y privilegiado nudo de comunicaciones la convierten en un lugar ideal para el viajero.
-La proximidad a numerosas playas y enclaves únicos para visitar hacen de esta ciudad el punto ideal sobre el que planificar unas vacaciones.</td>
-	<td bgcolor="pink" rowspan="3">
-	</tr>
-	<tr>
-		<td></td>
-	</tr>
-	<tr>
-		<td></td>
-	</tr>
-	<tr>
-		<td></td>
-	</tr>
+		<td width="20%" bgcolor="33FDFF" background="img/torrelavega.jpg" style="background-repeat: no-repeat; background-position: center center;background-size:cover;">
+			
+			<ul>
+				<li><a href="pagina.html"> <font color="F3F90B"> INICIO </font></a></li>
+				<li><a href="plazas.html"> <font color="F3F90B">PLAZAS </font></a></li>
+				<li><a href="la lechera.html"><font color="F3F90B"> LA LECHERA </font></a></li>
+				<li><a href="iglesias.html"><font color="F3F90B"> IGLESIAS </font></a></li>
+				<li><a href="mercado.html"><font color="F3F90B"> MERCADO DE GANADOS </font></a></li>
+			</ul>
+		</td>
+		
+		<td bgcolor="33FDFF" >
+			<center>
+					<br><img src="img/fondo.jpg" width="300"></br>
+					<br>Torrelavega es considerada la segunda ciudad en importancia de Cantabria y dista 27,5 km de Santander capital.</br> 
+					Su privilegiada situación, encrucijada de caminos y privilegiado nudo de comunicaciones la convierten en</br>
+					un lugar ideal para el viajero.La proximidad a numerosas playas y enclaves únicos para visitar hacen de </br>
+					esta ciudad el punto ideal sobre el que planificar unas vacaciones.
+			</center>
+		</td>		
+	</tr>	
 </table>
