--- a/plazas.html
+++ b/plazas.html
@@ -1,32 +1,35 @@
 
 
+
 <table width="100%" weight="100%">
 	<tr>
-		<td width="50%" bgcolor="E4FF33" colspan="3"><center><h1>TORRELAVEGA</h1></center></td>
-	</tr>
+		<td bgcolor="33FDFF" colspan="2">
+			<center>
+				<h1>TORRELAVEGA</h1>
+			</center>
+		</td>
+	</tr>	
 	<tr>
-		<td bgcolor="33FDFF"><a href="C:\xampp\htdocs\ari1t_01_html\pagina.html"> <font color="red"> INICIO </font></a></td><td bgcolor="pink"></td><td bgcolor="pink"></td>
-	</tr>
-	<tr>
-		<td bgcolor="33FDFF"><a href="C:\xampp\htdocs\ari1t_01_html\plazas.html"> PLAZAS </a><td bgcolor="pink" rowspan="3"><img src="C:\xampp\htdocs\ari1t_01_html\img\plaza llama.jpg" width="250" > plaza de la llama <td bgcolor="pink" rowspan="3"><img src="C:\xampp\htdocs\ari1t_01_html\img\plaza roja.jpg" width="250" > plaza roja o de baldomero iglesias </td>
-	</tr>
-	<tr>
-		<td bgcolor="33FDFF"><a href="C:\xampp\htdocs\ari1t_01_html\la lechera.html"> LA LECHERA </a></td>
-	</tr>
-	<tr>
-		<td bgcolor="33FDFF"><a href="C:\xampp\htdocs\ari1t_01_html\iglesias.html"> IGLESIAS </a></td>
-	</tr>
-	
-	<tr>
-		<td bgcolor="33FDFF"><a href="C:\xampp\htdocs\ari1t_01_html\barrios.html"> MERCADO DE GANADOS </a><td bgcolor="pink" rowspan="3"><img src="C:\xampp\htdocs\ari1t_01_html\img\plaza mayor.jpg" width="250" > plaza mayor <td bgcolor="pink" rowspan="3"></td>
-	
-	<tr>
-		<td></td>
-	</tr>
-	<tr>
-		<td></td>
-	</tr>
-	<tr>
-		<td></td>
-	</tr>
+		<td width="20%" bgcolor="33FDFF" background="img/torrelavega.jpg" style="background-repeat: no-repeat; background-position: center center;background-size:cover;">
+			
+			<ul>
+				<li><a href="pagina.html"> <font color="F3F90B"> INICIO </font></a></li>
+				<li><a href="plazas.html"> <font color="F3F90B">PLAZAS </font></a></li>
+				<li><a href="la lechera.html"><font color="F3F90B"> LA LECHERA </font></a></li>
+				<li><a href="iglesias.html"><font color="F3F90B"> IGLESIAS </font></a></li>
+				<li><a href="mercado.html"><font color="F3F90B"> MERCADO DE GANADOS </font></a></li>
+			</ul>
+		</td>
+		
+		<td bgcolor="33FDFF" >
+			<center>
+					<br><img src="img/plaza llama.jpg" width="300"></br>
+					<h3>plaza de la llama.</h3>
+					<br><img src="img/plaza mayor.jpg" width="300"></br>
+					<h3>plaza mayor.</h3>
+					<br><img src="img/plaza roja.jpg" width="300"></br>
+					<h3>plaza baldomero iglesias.</h3>
+			</center>
+		</td>		
+	</tr>	
 </table>
