--- a/mercado.html
+++ b/mercado.html
@@ -23,10 +23,10 @@
 		
 		<td bgcolor="33FDFF" >
 			<center>
-					<br><img src="img/lechera.jpg" width="300"></br>
-					<h3>la lechera.</h3>
-					<br><img src="img/lechera2.jpg" width="300"></br>
-					<h3>la lechera a vista de pajaro.</h3>
+					<br><img src="img/mercado.jpg" width="300"></br>
+					<h3>mercado de ganados.</h3>
+					<br><img src="img/mercado 2.jpg" width="300"></br>
+					<h3>mercado de ganados a vista de pajaro.</h3>
 					
 			</center>
 		</td>		
