--- a/html5.html
+++ b/html5.html
@@ -5,7 +5,7 @@
 	</head>
 	<body>
 		<CENTER>
-		<table border="8" width="80%" weight="100%">
+		<table  width="80%" weight="100%">
 			<tr>
 				<td  background="img/margarita.jpg" width="50">
 					<center>
@@ -34,10 +34,10 @@
 					</br>
 					<ul>
 						<li><font color="2B2F3A"><h3>ENLACES DE COMPAÑEROS</h3> </font></li>
-						<li><a href="https://hectorguti99.000webhostapp.com/LosCorralesdeBuelna1.html"> <font color="2B2F3A"> <h5>HECTOR</h5></font></a></li>
-						<li><a href="https://cantabria-infinita.000webhostapp.com/html.html"> <font color="2B2F3A"> <h5>IVAN</h5></font></a></li>
-						<li><a href="https://puentesanmiguel.000webhostapp.com/tabla.html"> <font color="2B2F3A"> <h5>VALENTIN</h5></font></a></li>
-						<li><a href="https://smart-congress.000webhostapp.com/PaginaHTML.html"> <font color="2B2F3A"> <h5>FRANCISCO</h5></font></a></li>
+						<li><a href="https://hectorguti99.000webhostapp.com/LosCorralesdeBuelna1.html"> <h5>HECTOR</h5></a></li>
+						<li><a href="https://cantabria-infinita.000webhostapp.com/html.html"><h5>IVAN</h5></a></li>
+						<li><a href="https://puentesanmiguel.000webhostapp.com/tabla.html"><h5>VALENTIN</h5></a></li>
+						<li><a href="https://smart-congress.000webhostapp.com/PaginaHTML.html"><h5>FRANCISCO</h5></a></li>
 																		
 					</ul>
 					</br>
