--- a/css.html
+++ b/css.html
@@ -34,14 +34,14 @@
 						font-size:24px;
 						">PUEBLOS DEL AYUNTAMIENTO</span></h3>
 						<br><h4 style="text-decoration:underline;">RUENTE</H4>En Ruente esta localizado el ayuntamiento
-						<br><img src="img/RUENTE.jpg" width="300">
+						<br><img src="img/RUENTE.jpg" style="width:300px;">
 						<br><h4 style="text-decoration:underline;">UCIEDA</H4>Es el que tiene mayor poblacion y mayor extension de bosque
-						<br><img src="img/UCIEDA.jpg" width="300">
+						<br><img src="img/UCIEDA.jpg" style="width:300px;">
 						<br><h4 style="text-decoration:underline;">BARCENILLAS</H4>Un pueblo con calles empedradas y lleno de palacios montañeses
-						<br><img src="img/BARCENILLAS.jpg" width="300">
+						<br><img src="img/BARCENILLAS.jpg" style="width:300px;">
 						<br><h4 style="text-decoration:underline;">LA MIÑA</H4>aqui estan localizadas las famosas 
 						<span style="font-style:italic;"><a href="http://www.ruente.es/senderos-de-la-naturaleza/cascadas-de-lamina">cascadas</a></span>
-						<br><img src="img/LAMIÑA.jpg" width="300">
+						<br><img src="img/LAMIÑA.jpg" style="width:300px;">
 					
 				</td>
 			</tr>	
@@ -57,7 +57,7 @@
 					<br>
 					<ul style="text-align:left;">
 
-						<li><h3 style="color:2B2F3A;">ENLACES DE COMPAÑEROS</h3></li>
+						<li><h3>ENLACES DE COMPAÑEROS</h3></li>
 						<li><a href="https://hectorguti99.000webhostapp.com/LosCorralesdeBuelna1.html"><h5 >HECTOR</h5></a></li>
 						<li><a href="https://cantabria-infinita.000webhostapp.com/html.html"><h5>IVAN</h5></a></li>
 						<li><a href="https://puentesanmiguel.000webhostapp.com/tabla.html"><h5>VALENTIN</h5></a></li>
@@ -65,7 +65,7 @@
 					</ul>													
 					
 					<br>
-					<h3 style="color:2B2F3A;">DEJANOS TU E-MAIL PARA MAS INFORMACION</h3>
+					<h3>DEJANOS TU E-MAIL PARA MAS INFORMACION</h3>
 					<form>
 						<input type="email"/><br>
 						<button>enviar</button>
