--- a/css.html
+++ b/css.html
@@ -67,7 +67,9 @@
 					<br>
 					<h3>DEJANOS TU E-MAIL PARA MAS INFORMACION</h3>
 					<form>
-						<input type="email"/><br>
+						<input type="email"/>
+						<br>
+						<br>
 						<button>enviar</button>
 					</form>
 				</td>
