--- a/html5.html
+++ b/html5.html
@@ -33,7 +33,7 @@
 					</br>
 					</br>
 					<ul>
-						<li><font color="2B2F3A"><h3>ENLACES DE COMPAÑEROS</h3> </font></li>
+						<li><h3>ENLACES DE COMPAÑEROS</h3></li>
 						<li><a href="https://hectorguti99.000webhostapp.com/LosCorralesdeBuelna1.html"> <h5>HECTOR</h5></a></li>
 						<li><a href="https://cantabria-infinita.000webhostapp.com/html.html"><h5>IVAN</h5></a></li>
 						<li><a href="https://puentesanmiguel.000webhostapp.com/tabla.html"><h5>VALENTIN</h5></a></li>
@@ -41,7 +41,7 @@
 																		
 					</ul>
 					</br>
-					<center><font color="2B2F3A"><h3>DEJANOS TU E-MAIL PARA MAS INFORMACION</h3> </font></center>
+					<center><h3>DEJANOS TU E-MAIL PARA MAS INFORMACION</h3></center>
 					<form>
 						<center><input type="email"/></center></br>
 						<center><button>enviar</button></center>
