--- a/style.html
+++ b/style.html
@@ -25,11 +25,11 @@
 				font-weight:bold;
 				font-size:24px;
 			}
-			h4{
+			.cuerpo h4{
 				text-decoration:underline
 			}
 			
-			img{
+			.cuerpo img{
 				width:300px
 			}
 			#cascada{
@@ -57,7 +57,7 @@
 					</h1>
 					
 				</td>
-				<td id="td_l44" rowspan="2">	
+				<td id="td_l44" class="cuerpo" rowspan="2">	
 						<br><h3><span id="span_l45">PUEBLOS DEL AYUNTAMIENTO</span></h3>
 						<br><h4>RUENTE</H4>En Ruente esta localizado el ayuntamiento
 						<br><img src="img/RUENTE.jpg">
