--- a/jardin.html
+++ b/jardin.html
@@ -15,9 +15,9 @@
 					Si los paquetes de césped fuesen de "Z" m2, ¿cuántos paquetes harían falta comprar para cubrir el jardín?</br>
 					</br>					
 					<form>
-					Ancho del jardin<input id="x" name="x" onkeyup="calcular()" value="<?=$_GET['x']?>"/>
-					Diametro de fuente<input id="y" name="y" onkeyup="calcular()" value="<?=$_GET['y']?>"/>
-					Tamaño paquetes<input id="z" name="z" onkeyup="calcular()" value="<?=$_GET['z']?>"/>
+					Ancho del jardin<input id="x" name="x" onkeyup="calcular()" />
+					Diametro de fuente<input id="y" name="y" onkeyup="calcular()" />
+					Tamaño paquetes<input id="z" name="z" onkeyup="calcular()" />
 					</br>
 					</br><button>CALCULAR</button>
 					</br>
